<resources>
    <string name="complete">完成</string>
    <string name="complete_with_count">完成(%d)</string>
    <string name="draft">[草稿]</string>
    <string name="video">视频</string>
    <string name="set_conversation_to_top">置顶聊天</string>
    <string name="scan_qrcode">扫一扫</string>
    <string name="contacts">联系人</string>
    <string name="new_friend">新的朋友</string>
    <string name="group_chat">群聊</string>
    <string name="join_group_chat">加入群聊</string>
    <string name="join_group_need_verify">已开启入群验证，请输入理由，等待群主或管理员审批</string>
    <string name="enter_group_chat">进入群聊</string>
    <string name="contact_category">联系人</string>
    <string name="group_category">群组</string>
    <string name="voip_audio_chat">语音聊天</string>
    <string name="voip_video_chat">视频聊天</string>
    <string name="voip_switch_camera">切换摄像头</string>
    <string name="voip_hangup">挂断</string>
    <string name="voip_accept">接听</string>
    <string name="voip_connecting">连接中...</string>
    <string name="voip_call_duration">通话时长: %1$s</string>
    <string name="conference_create">发起会议</string>
    <string name="conference_join">加入会议</string>
    <string name="conference_title">会议主题</string>
    <string name="conference_id">会议ID</string>
    <string name="conference_join_hint">请输入会议ID</string>
    <string name="conference_participants">参会人</string>
    <string name="add_friend">添加朋友</string>
    <string name="no_recommend_friend">还没有推荐的朋友</string>
    <string name="user_no_found">该用户不存在</string>
    <string name="search">搜索</string>
    <string name="search_user_tip_local">在本单位搜索用户\n输入关键词开始搜索</string>
    <string name="search_user_tip_domain">在 %1$s 搜索用户\n输入关键词开始搜索</string>
    <string name="search_user_category_local">在本单位搜索用户</string>
    <string name="search_user_category_domain">在 %1$s 搜索用户</string>
    <string name="nickname_colon">昵称:%1$s</string>
    <string name="set_alias_and_tag">设置备注和标签</string>
    <string name="send_message">发消息</string>
    <string name="video_chat">视频聊天</string>
    <string name="add_to_contact">添加到通讯录</string>
    <string name="change_my_name_tip">好名字可以让你的朋友 更容易记住你。</string>
    <string name="alias">备注名</string>
    <string name="alias_no_empty">备注名不能为空</string>
    <string name="postscript_tip">你需要发送验证申请，等对方通过</string>
    <string name="send">发送</string>
    <string name="hold_to_talk">按住 说话</string>
    <string name="shot">拍摄</string>
    <string name="location">位置</string>
    <string name="file">文件</string>
    <string name="create_group_success">创建群成功</string>
    <string name="create_group_fail">创建群失败</string>
    <string name="no_group_now">暂无群聊</string>
    <string name="group_name">群聊名称</string>
    <string name="group_portrait">群头像</string>
    <string name="untitled">未命名</string>
    <string name="group_announcement">群公告</string>
    <string name="group_announcement_max_length">群公告最多允许 2000 个字符</string>
    <string name="message_free">消息免打扰</string>
    <string name="my_nickname_in_this_group">我在本群的昵称</string>
    <string name="show_group_member_name">显示群成员昵称</string>
    <string name="clear_chat_log">清空聊天记录</string>
    <string name="delete_and_exit">删除并退出</string>
    <string name="delete_and_dismiss">解散并删除</string>
    <string name="add_member_success">添加群成员成功</string>
    <string name="add_member_fail">添加群成员失败</string>
    <string name="del_member_success">删除群成员成功</string>
    <string name="del_member_fail">删除群成员失败</string>
    <string name="modify_group_join_type_failed">修改加群方式失败</string>
    <string name="modify_group_search_type_failed">修改群搜索方式失败</string>
    <string name="modify_group_history_failed">修改群历史消息失败</string>
    <string name="set_group_permission_error">设置群成员权限失败 %d</string>
    <string name="set_group_announcement_success">设置群公告成功</string>
    <string name="set_group_announcement_failed">设置群公告失败: %1$d %2$s</string>
    <string name="modify_group_name_success">修改群名称成功</string>
    <string name="modify_group_name_failed">修改群名称失败: %d</string>
    <string name="modify_group_remark_success">修改群备注成功</string>
    <string name="modify_group_remark_failed">修改群备注失败: %d</string>
    <string name="group_name_contains">群名称包含: %s</string>
    <string name="group_remark_contains">群备注包含: %s</string>
    <string name="group_member_name_contains">群成员名包含: %s</string>
    <string name="group_member_alias_contains">群成员备注包含: %s</string>
    <string name="join_by_qrcode">通过扫描%s分享的二维码加入</string>
    <string name="join_by_card">通过%s分享的群名片加入</string>
    <string name="invited_by">%s邀请加入</string>
    <string name="join_by_search">搜索群聊加入</string>
    <string name="unknown">未知</string>
    <string name="group_owner">群主</string>
    <string name="unsubscribe">取消订阅</string>
    <string name="unsubscribe_failed">取消订阅失败 %d</string>
    <string name="channel_unsubscribe_confirm">确认取消订阅频道?</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="audio_volume_increase_error">音量增大失败</string>
    <string name="audio_record_init_error">录音初始化失败</string>
    <string name="audio_record_stop_error">录音停止失败</string>
    <string name="audio_record_loss_error">录音焦点丢失</string>
    <string name="voice_rec">按住说话</string>
    <string name="voice_cancel">松开取消</string>
    <string name="voice_short">说话时间太短</string>
    <string name="voice_input_voice">语音</string>
    <string name="voice_input_release_to_send">松开 发送</string>
    <string name="voice_input_release_to_cancel">松手 取消</string>
    <string name="voice_input_slide_to_text">滑到这里 转文字</string>
    <string name="voice_input_release_to_edit">松手 编辑文字</string>
    <string name="voice_input_send_voice">发送原语音</string>
    <string name="voice_input_no_text">未识别到文字</string>
    <string name="voice_input_recognize_failed">转文字失败</string>
    <string name="voice_input_count_down">%d 秒后将停止录音</string>
    <string name="ptt_hold_to_talk">按住 对讲</string>
    <string name="ptt_release_to_end">松手结束对讲</string>
    <string name="ptt_request_failed">请求对讲失败 %1$d</string>
    <string name="channel">频道</string>
    <string name="channel_subscribe">订阅</string>
    <string name="channel_subscribe_failed">订阅失败: %1$d %2$s</string>
    <string name="channel_subscribe_success">订阅成功</string>
    <string name="channel_not_exist">频道不存在或已被销毁</string>
    <string name="channel_name">名称: %1$s</string>
    <string name="channel_desc">描述: %1$s</string>
    <string name="channel_owner">创建者: %1$s</string>
    <string name="channel_subscription_count">订阅数: %1$d</string>
    <string name="channel_empty_desc">频道主什么也没写</string>
    <string name="channel_following">取消收听</string>
    <string name="channel_not_following">收听频道</string>
    <string name="channel_following_status">正在%1$s</string>
    <string name="channel_following_success">%1$s成功</string>
    <string name="channel_following_failed">%1$s失败</string>
    <string name="channel_menu_title">频道</string>
    <string name="channel_create_title">创建频道</string>
    <string name="channel_create_processing">创建频道中...</string>
    <string name="channel_create_success">创建频道成功</string>
    <string name="channel_create_failed">创建频道失败</string>
    <string name="channel_set_portrait">请设置头像</string>
    <string name="channel_details">频道详情</string>
    <string name="channel_qr_code_title">频道二维码</string>
    <string name="max_emoji_per_message">最多允许输入%d个表情符号</string>
    <string name="channel_no_menu">频道暂未配置菜单</string>
    <string name="audio_permission_required">需要录音权限</string>
    <string name="show_channel_info">显示频道信息</string>
    <string name="channel_category">频道</string>
    <string name="click_to_expand_more">点击展开剩余%d项</string>
    <string name="click_to_expand">点击查看更</string>
    <string name="channel_name_title">频道名称</string>
    <string name="channel_desc_title">频道描述</string>
    <string name="qrcode">二维码</string>
    <string name="web_page">网页</string>
    <string name="search_message">查找聊天记录</string>
    <string name="chatroom_details">聊天室详情</string>
    <string name="chatroom_desc_title">聊天室描述</string>
    <string name="chatroom_name_title">聊天室名称</string>
    <string name="mesh_service_not_enabled">未开启服务互通功能</string>
    <string name="no_external_organization">没有外部单位</string>
    <string name="contact_request_accepted">已添加</string>
    <string name="contact_request_rejected">已拒绝</string>
    <string name="contact_request_accept_error">接受好友请求失败, err = %1$d</string>
    <string name="contact_unknown">%1$s</string>
    <string name="invite_default_message">我是 %1$s</string>
    <string name="invite_sent">好友邀请已发送</string>
    <string name="invite_error">添加好友失败，errorCode = %1$d</string>
    <string name="contact_pick_confirm">确定</string>
    <string name="contact_pick_confirm_with_count">确定(%d)</string>
    <string name="pick_conversation_done">完成</string>
    <string name="pick_conversation_done_with_count">完成(%d)</string>
    <string name="pick_user_limit_exceeded">选人超限</string>
    <string name="pick_user_empty_hint">请选择用户</string>
    <string name="pick_user_search_hint">搜索</string>
    <string name="contact_count_empty">没有联系人</string>
    <string name="contact_count_format">%d位联系人</string>
    <string name="file_type_any">*/*</string>
    <string name="file_select_error">选择文件错误</string>
    <string name="file_ext_title">文件</string>
    <string name="image_ext_title">照片</string>
    <string name="location_ext_title">位置</string>
    <string name="shoot_ext_title">拍摄</string>
    <string name="shoot_error_feedback">拍照错误, 请向我们反馈</string>
    <string name="user_card_personal">[个人名片]</string>
    <string name="user_card_group">[群组]</string>
    <string name="user_card_chatroom">[聊天室]</string>
    <string name="user_card_channel">[频道]</string>
    <string name="user_card_cancel">取消</string>
    <string name="user_card_send">发送</string>
    <string name="all_files">所有文件</string>
    <string name="my_files">我的文件</string>
    <string name="conversation_files">会话文件</string>
    <string name="user_files">用户文件</string>
    <string name="chat_records_category">聊天记录</string>
    <string name="blacklist">黑名单</string>
    <string name="group_member_permission">群成员权限</string>
    <string name="modify_wildfire_id">修改野火ID</string>
    <string name="organization_name">组织名称</string>
    <string name="title_placeholder">title</string>
    <string name="content_placeholder">content</string>
    <string name="email">邮箱</string>
    <string name="phone">电话</string>
    <string name="address">地址</string>
    <string name="description">描述</string>
    <string name="search_user_in_organization">在本单位中查找用户</string>
    <string name="group_member_management">成员管理</string>
    <string name="group_managers">管理员</string>
    <string name="set_group_mute">设置禁言</string>
    <string name="group_basic_settings">群基本设置</string>
    <string name="group_join_type">加群方式</string>
    <string name="group_join_type_no_limit">不限制加入</string>
    <string name="group_search_type">查找方式</string>
    <string name="group_search_type_not_allowed">不允许查找</string>
    <string name="group_history_message">群历史消息</string>
    <string name="group_history_message_not_allowed">不允许新成员查看历史消息</string>
    <string name="moments">朋友圈</string>
    <string name="find_me_ways">找到我的方式</string>
    <string name="add_friend_verify">加我为好友时，需要验证</string>
    <string name="delete_friend">删除好友</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="remove_from_blacklist">移出黑名单</string>
    <string name="set_alias">设置备注名</string>
    <string name="set_star_friend">设为星标好友</string>
    <string name="remove_star_friend">取消星标好友</string>
    <string name="collection_title">标题</string>
    <string name="collection_title_hint">请输入接龙标题</string>
    <string name="collection_desc">描述</string>
    <string name="collection_desc_hint">请输入接龙描述（可选）</string>
    <string name="collection_template">模板</string>
    <string name="collection_template_hint">请输入模板（如：姓名-电话）</string>
    <string name="collection_expire_type">过期时间</string>
    <string name="collection_no_expire">无限期</string>
    <string name="collection_set_expire">设置过期时间</string>
</resources>