<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 标题栏不在这里：本布局现在由页面 Fragment 使用，标题栏由宿主提供
         （手机端是壳 Activity 的 fragment_container_activity，平板是右栏的 PanePageFragment）。 -->

    <cn.wildfire.chat.kit.widget.OptionItemView
        android:id="@+id/nameOptionItemView"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:desc="野火线上"
        app:show_divider="true"
        app:title="@string/organization_name" />

    <cn.wildfire.chat.kit.widget.OptionItemView
        android:id="@+id/emailOptionItemView"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:show_divider="true"
        app:title="@string/email" />

    <cn.wildfire.chat.kit.widget.OptionItemView
        android:id="@+id/telOptionItemView"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:show_divider="true"
        app:title="@string/phone" />

    <cn.wildfire.chat.kit.widget.OptionItemView
        android:id="@+id/addrOptionItemView"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:show_divider="true"
        app:title="@string/address" />

    <cn.wildfire.chat.kit.widget.OptionItemView
        android:id="@+id/descOptionItemView"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:show_divider="true"
        app:title="@string/description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <View style="@style/Line" />

        <TextView
            android:id="@+id/searchTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_option_item"
            android:gravity="center"
            android:text="@string/search_user_in_organization"
            android:textColor="@color/black1"
            android:textSize="16sp" />

        <View style="@style/Line" />
    </LinearLayout>
</LinearLayout>