<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/compositeContentLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:background="@drawable/img_bubble_receive"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="12dp"
    android:paddingRight="16dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone|email|map|web"
        android:linksClickable="true"
        android:maxWidth="202dp"
        android:minHeight="40dp"
        android:text="@string/title_placeholder"
        android:textColorLink="#3655bf"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone|email|map|web"
        android:linksClickable="true"
        android:maxWidth="202dp"
        android:minHeight="40dp"
        android:text="@string/content_placeholder"
        android:textColorLink="#3655bf"
        android:textSize="14sp" />

    <View style="@style/Line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:maxWidth="202dp"
        android:maxLines="2"
        android:paddingTop="2dp"
        android:text="@string/chat_records_category"
        android:textSize="12sp"
        android:visibility="visible" />
</LinearLayout>
