<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:orientation="vertical">

    <!-- 标题栏不在这里：本布局现在由页面 Fragment 使用，标题栏由宿主提供
         （手机端是壳 Activity 的 fragment_container_activity，平板是右栏的 PanePageFragment）。 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/blacklistOptionItemView"
            style="@style/OptionItem"
            android:background="@drawable/selector_option_item"
            app:title="@string/blacklist" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/momentsPrivacyOptionItemView"
            style="@style/OptionItem"
            android:background="@drawable/selector_option_item"
            app:title="@string/moments" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <cn.wildfire.chat.kit.widget.OptionItemView
            android:id="@+id/findMeOptionItemView"
            style="@style/OptionItem"
            android:background="@drawable/selector_option_item"
            app:title="@string/find_me_ways" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/option_item_margin_top"
        android:background="@color/white"
        android:paddingLeft="@dimen/item_margin_left_and_right"
        android:paddingRight="@dimen/item_margin_left_and_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/add_friend_verify"
            android:textColor="@color/black1"
            android:textSize="16sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchAddFriendNeedVerify"
            style="@style/defaultSwitch"
            android:layout_gravity="center_vertical|right" />

    </FrameLayout>
</LinearLayout>